--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -1,5 +1,5 @@
 /**
- * Theme Name:  Hester Street Collective
+ * Theme Name:  Hester Street Collaborative
  * Theme URI:   https://github.com/ObjectiveSubject/Hester-Street
  * Description: Theme for hesterstreet.org
  * Author:      Objective Subject
