--- a/assets/css/sass/blocks/_tables.scss
+++ b/assets/css/sass/blocks/_tables.scss
@@ -7,7 +7,7 @@ table {
 
     .page-content & > {
         @extend .table;
-        @extend .table-ruled;
+        @extend .table--ruled;
     }
 }
 caption {
