--- a/assets/css/sass/shared/_mixins.scss
+++ b/assets/css/sass/shared/_mixins.scss
@@ -1,3 +1,9 @@
+// Border
+// ------------------------------------- //
+@mixin border($color) {
+    border-left: $border-width solid $color;
+}
+
 // Media queries
 // ------------------------------------- //
 @mixin media($size) {
