--- a/assets/css/sass/blocks/_buttons.scss
+++ b/assets/css/sass/blocks/_buttons.scss
@@ -5,7 +5,7 @@
 	box-shadow: none;
 	color: $color-btn;
 	display: inline-block;
-	font-family: $font-main;
+	font-family: $gta-extended-black;
 	font-size: 1rem;
 	font-weight: 700;
 	letter-spacing: 0.1em;
