updates and fixes
built out page and single

--- a/assets/css/sass/blocks/_forms.scss
+++ b/assets/css/sass/blocks/_forms.scss
@@ -10,7 +10,7 @@ label {
 }
 
 .form-group {
-    @extend .u-clearfix;
+    @extend .u-clear;
     display: block;
     clear: both;
     margin-top: 1rem;
