--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,9 +1,6 @@
+.masthead-sidebar {
+    @extend .u-mb-6;
+}
 .masthead {
-    flex: 0 0 rem(180);
-    @include media($md) {
-        order: 1;
-    }
-    .page-section & {
-        @extend .u-mb-6;
-    }
+    
 }
