--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -28,7 +28,7 @@ textarea {
  h1, .h1 {
 	font-family: $gta-extended-black;
 	font-size: rem(70);
-	line-height: 1.125em;
+	line-height: 1;
     margin-top: 0;
     margin-bottom: 0;
 	text-transform: uppercase;
@@ -93,6 +93,10 @@ textarea {
  	color: $color-link;
  	text-decoration: none;
  	@include transition(all 300ms ease);
+     
+     [class*="u-bg-"] & {
+         color: white;
+     }
 
  	&:hover,
  	&:focus,
