--- a/assets/css/sass/blocks/_section.scss
+++ b/assets/css/sass/blocks/_section.scss
@@ -1,18 +1,13 @@
-.section-row {
-    @include display(flex);
-    align-items: stretch;
-    position: relative;
-}
-.section-column {
-    @extend .u-px-1;
-    @extend .u-border-black;
-    [class*="u-bg-"] & {
-        @extend .u-border-white;
-    }
-}
 .section-content {
     @include flex(1);
-    @include media($md) {
-        order: 0;
+    margin-right: $sidebar-width;
+    .has-sidebar & {
+        @include media($md) {
+            order: 0;
+        }
+        @extend .u-mr-0;
+    }
+    .has-module & {
+        @extend .u-mr-0;
     }
 }
