--- a/assets/css/sass/shared/utility/_layout.scss
+++ b/assets/css/sass/shared/utility/_layout.scss
@@ -13,6 +13,7 @@
 // Layout
 // --------------------------------------- /
 .u-container {
+    position: relative;
 	max-width: $max-width;
 	margin: 0 auto;
 	padding: 0 $container_padding;
