--- a/assets/css/sass/views/_header.scss
+++ b/assets/css/sass/views/_header.scss
@@ -1,3 +1,19 @@
-.site-header {
-	width: 100%;
+.site-menu {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    @extend .u-color-white;
+    .u-container {
+        min-height: 100%;
+        height: 100%;
+    }
+}
+.site-menu-content {
+    @extend .site-content;
+    @extend .u-py-3;
+    min-height: 100%;
+    height: 100%;
 }
