--- a/assets/css/sass/blocks/_logo.scss
+++ b/assets/css/sass/blocks/_logo.scss
@@ -2,7 +2,7 @@
     display: block;
 }
 .hsc-logo {
-    width: 144px;
+    width: $leading * 8;
     vertical-align: bottom;
     g {
         fill: black;
