--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,7 +539,7 @@ html {
 .u-pl-1, .post-meta {
   padding-left: 1rem; }
 
-.u-px-1, .menu, .section-content, .sidebar, .timeline, .footer-column {
+.u-px-1, .menu, .section-content, .sidebar, .footer-column {
   padding-left: 1rem;
   padding-right: 1rem; }
 
@@ -1311,7 +1311,7 @@ label {
   display: block; }
 
 .hsc-logo {
-  width: 144px;
+  width: 8rem;
   vertical-align: bottom; }
   .hsc-logo g {
     fill: black; }
